<resources>
    <string name="app_name">Progetto</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_registration">Registration</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="title_activity_registration" translatable="false">RegistrationActivity</string>
    <string name="registration_failed">Registration failed</string>
    <string name="fridge">Pantry</string>
    <string name="home">Home</string>
    <string name="search">Store</string>
    <string name="recipe">Recipe</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="default_web_client_id" translatable="false">69630220301-7kuoiisiqn4bn0cf55k74htn0acns9o0.apps.googleusercontent.com</string>
    <string name="nome_della_ricetta" translatable="false">Nome della ricetta</string>
    <string name="descrizione_della_ricetta" translatable="false">Descrizione della ricetta</string>
    <string name="ingredienti" translatable="false">Ingredienti</string>
    <string name="procedimento" translatable="false">Procedimento</string>
    <string name="immagine" translatable="false">Immagine</string>
    <string name="difficolt" translatable="false">Difficoltà</string>
    <string name="categoria" translatable="false">Categoria</string>
    <string name="tempo_di_preparazione" translatable="false">Tempo di preparazione</string>
    <string name="aggiungi_ricetta" translatable="false">Aggiungi Ricetta</string>
    <string name="gif" translatable="false">gs://device-streaming-b22f1c9d.appspot.com/decepcao-pensativo.gif</string>
    <string name="seleziona_immagine">Select Image</string>
    <string name="store_image" />
    <string name="rate_store" />
    <string name="qty">Qty</string>
    <string name="global_recipe">Global Recipe</string>
    <string name="saved_recipe">Saved Recipe</string>
    <string name="recommended_recipe">Recommended Recipes</string>
</resources>