<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/nome_della_ricetta"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descrizione_della_ricetta"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingredienti"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/recipe_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/procedimento"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/recipe_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/immagine"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/recipe_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/difficolt"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/recipe_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/categoria"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/recipe_preparation_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tempo_di_preparazione"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_submit_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aggiungi_ricetta" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

